# desktop

./: .cursorignore  .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  UPLOAD_PROGRESS_IMPLEMENTATION.md  dev_macos_deeplink.sh  dev_macos_tests.sh  docs.yaml  env.example  mock_tauri_server.py  navigation-map.md  package-lock.json  package.json  pubspec.yaml
.cursor/rules/: flutter-dev.md  github-actions.mdc
.github/workflows/: build-no-signed-test.yml  build-prod-macos.yml  build-prod-windows.yml  build-test-macos.yml  build-test-windows.yml  build-test.yml  build.yml  release.yml
clones/: README.md  analysis_options.yaml  pubspec.yaml
clones/lib/: assets.dart  main.dart
clones/lib/application/: agent.dart  agent.g.dart  apps.dart  blacklist.dart  blacklist.g.dart  deeplink_provider.dart  deeplink_provider.g.dart  leaderboard.dart  pool.dart  pool.g.dart  privacy.dart  quest.dart  recording.dart  settings.dart  settings.g.dart  shared_preferences_factory.dart  shared_preferences_factory.g.dart  submissions.dart  tasks.dart  tauri_api.dart  tauri_api.g.dart  upload.dart
clones/lib/infrastructure/: agent.repository.dart  agent_socket.service.dart  apps.repository.dart  blacklist.repository.dart  leaderboard.repository.dart  pool.repository.dart  privacy.repository.dart  quest.repository.dart  recording.repository.dart  settings_repository.dart  submissions.repository.dart  tasks.repository.dart  tauri_api_client.dart  upload.repository.dart  wallet.repository.dart
clones/lib/ui/: main_layout.dart
clones/lib/utils/: api_client.dart  env.dart  fav_tools.dart  platform.dart
clones/linux/: CMakeLists.txt
clones/linux/runner/: my_application.cc
clones/macos/Runner/: Info.plist
clones/macos/Runner.xcodeproj/: project.pbxproj
clones/native/src-tauri/: Cargo.toml  tauri.conf.json
clones/native/src-tauri/src/core/: record.rs
clones/native/src-tauri/src/tools/: axtree.rs  helpers.rs  pipeline.rs
clones/windows/: CMakeLists.txt
clones/windows/runner/: Runner.rc
docs/: index.mdx
docs/projects/: backend.mdx  desktop.mdx  website.mdx
lib/: assets.dart  main.dart
lib/application/: agent.dart  agent.g.dart  apps.dart  apps.g.dart  blacklist.dart  deeplink_provider.dart  demonstration.dart  demonstration.g.dart  factory.dart  factory.g.dart  feature_flags.dart  gas.dart  gas.g.dart  gas_alert_provider.dart  leaderboard.dart  metadata.dart  metadata.g.dart  pool.dart  pool.g.dart  privacy.dart  quest.dart  recording.dart  recording.g.dart  referral.dart  referral.g.dart  settings.dart  settings.g.dart  shared_preferences_factory.dart  subgraph_provider.dart  submissions.dart  submissions.g.dart  tasks.dart  tasks.g.dart  tauri_api.dart  upload.dart  upload_modal_provider.dart  wallet_modal_provider.dart
lib/application/factory_funds_modal/: provider.dart  provider.g.dart  state.dart  state.freezed.dart
lib/application/factory_withdraw_modal/: provider.dart  provider.g.dart  state.dart  state.freezed.dart
lib/application/referral/: provider.dart
lib/application/session/: provider.dart  provider.g.dart  state.dart  state.freezed.dart
lib/application/tools_init/: provider.dart  state.freezed.dart
lib/application/transaction/: provider.dart  provider.g.dart  state.dart  state.freezed.dart  state.g.dart
lib/application/upload/: provider.dart  state.dart
lib/domain/models/: extended_pool.freezed.dart  factory_generate_response.dart  factory_generate_response.freezed.dart  factory_generate_response.g.dart  factory_settings.g.dart  token.dart  (+9 more)
lib/infrastructure/: agent.repository.dart  agent_socket.service.dart  apps.repository.dart  blacklist.repository.dart  demonstration.repository.dart  factories.repository.dart  gas.repository.dart  leaderboard.repository.dart  metadata.repository.dart  pool.repository.dart  privacy.repository.dart  quest.repository.dart  referral.repository.dart  settings_repository.dart  subgraph.repository.dart  submissions.repository.dart  tasks.repository.dart  tauri_api_client.dart  upload.repository.dart  wallet.repository.dart
lib/ui/: main_layout.dart
lib/utils/: api_client.dart  breakpoints.dart  env.dart  fav_tools.dart  format_file_info.dart  format_num.dart  format_time.dart  multi_windows_record.dart  platform.dart  platform_compatibility.dart  platform_desktop.dart  platform_web.dart  window_alignment.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
native/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
scripts/: build_web_tauri.sh  dev-windows.bat  dev-windows.ps1  dev_tauri_desktop.ps1  dev_web_tauri.ps1  dev_web_tauri.sh  preparePackage.txt
scripts/macos/: dev_web_tauri.sh
scripts/windows/: dev_tauri_desktop.bat  dev_web_tauri.bat  dev_web_tauri.sh
src/: app.css
src-tauri/: Cargo.toml  build-windows.bat  build.rs  tauri.conf.json  tauri.conf.json.template  tauri.test.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: ipc_server.rs  lib.rs  main.rs
src-tauri/src/commands/: general.rs  mod.rs  record.rs  recordings.rs  settings.rs  tools.rs  transaction.rs
src-tauri/src/core/: archive.rs  input.rs  record.rs
src-tauri/src/tools/: axtree.rs  cqa.rs  ffmpeg.rs  helpers.rs  mod.rs  pipeline.rs  wl_screenrec.rs
src-tauri/src/utils/: github_release.rs  logger.rs  mod.rs  permissions.rs  platform.rs  proxy.rs  settings.rs  url.rs  windows.rs
src/routes/: +layout.ts  +page.svelte
viralmind_flutter/: README.md  pubspec.yaml  run_with_env.sh
viralmind_flutter/lib/: assets.dart  main.dart  rust_api.dart
viralmind_flutter/linux/: CMakeLists.txt
viralmind_flutter/rust/: Cargo.toml
viralmind_flutter/scripts/: preparePackage.txt  rust_bridge.sh
viralmind_flutter/web/: index.html  manifest.json
viralmind_flutter/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: main.cpp
(+976 files in other folders)
