[package]
name = "clones-desktop"
version = "0.1.0"
description = "A new Flutter project."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gym_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.23", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"
macos-accessibility-client = "0.0.1"
window-vibrancy = "0.5.2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target."cfg(not(target_os = \"linux\"))".dependencies]
app-finder = "0.1.0"

[target.'cfg(windows)'.dependencies]
multiinput = "0.1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dependencies]
tauri = { version = "2.0.0-beta.23", features = ["tray-icon", "devtools", "macos-private-api", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "2.0.0-beta.9"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
chrono = "0.4"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
lazy_static = "1.4.0"
display-info = "0.4.3"
xcap = "0.2.2"
base64 = "0.21.7"
image = "0.24.7"
tauri-plugin-shell = "2.0.0-beta.8"
tauri-plugin-os = "2.0.0-beta.8"
tauri-plugin-clipboard-manager = "2.0.0-beta.8"
tauri-plugin-process = "2.0.0-beta.8"
tauri-plugin-log = { version = "2.0.0-beta.8", features = ["colored"] }
log = "0.4.26"
tauri-plugin-deep-link = "2.0.0-beta.8"
tauri-plugin-dialog = "2.0.0-beta.8"
dotenvy = "0.15"
walkdir = "2"
wait-timeout = "0.2"
rlimit = "0.10"
anyhow = "1.0"

# Ajouts pour le serveur IPC
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5.0", features = ["cors"] }

[dev-dependencies]
tempfile = "3.10.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
